ahaha fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -432,9 +432,7 @@ that have a width less or equal than 500px*/
 @media screen and (min-width: 700px) {
     .page-wrap {  
         display: flex;
-    }
-    body {
-        overflow: hidden;
+        overflow-x: hidden;
     }
 }
 @media screen and (max-width: 700px) {
